# open_quartz

./: .gitignore  CHANGELOG.md  DESIGN.md  DEVELOPMENT.md  GAP_ANALYSIS.md  PLAN_REALTIME_LOOP.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.functional.config.ts  vitest.shaders.config.ts
.github/workflows/: ci.yml  models.yml  release.yml
docs/: DESIGN.md  NN_SUPPORT_DESIGN.md  ONNX_NODE_DESIGN.md
rust/: Cargo.toml
rust/crates/yolo-detector/: Cargo.toml  README.md
rust/crates/yolo-detector/pkg/: yolo_detector.d.ts  yolo_detector.js
rust/crates/yolo-detector/pkg/snippets/rimeflow-yolov8n-b28e76e5d25f3e3b/: inline0.js
rust/crates/yolo-detector/src/: lib.rs
rust/crates/yolo-sem/: Cargo.toml
rust/crates/yolo-sem/pkg/: yolo_sem.d.ts  yolo_sem.js
rust/crates/yolo-sem/pkg/snippets/rimeflow-yolo26n-sem-5ad7c86c1ff9b390/: inline0.js
rust/crates/yolo-sem/src/: lib.rs
scripts/: copy-model.mjs  copy-ort.mjs
src/: App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/catalog/: mathOps.ts  onnxRegistry.ts  predefinedShaders.ts
src/components/: Header.tsx  ImageLightbox.tsx  OutputPanel.tsx
src/engine/: clock.ts  compositor.ts  executionEngine.ts  mouseState.ts  onnxCatalog.ts  onnxInference.ts  onnxIntrospect.ts  onnxModelManager.ts  onnxOverlay.ts  onnxRegistry.ts  onnxSegSession.ts  onnxSession.ts  predefinedShaders.ts  realtimeHost.ts  shaderCompiler.ts  shaderCompletions.ts  shaderParser.ts  types.ts  videoSource.ts  webglRenderer.ts  webgpuExecutionEngine.ts  yoloDetectionPostprocess.ts  yoloSegmentationPostprocess.ts
tests/: setup.ts
(+104 files in other folders)
